--- a/app/src/main/res/layout/activity_show_detail.xml
+++ b/app/src/main/res/layout/activity_show_detail.xml
@@ -63,11 +63,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/image">
 
                 <ImageView
+                    android:id="@+id/imagesub"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_baseline_indeterminate_check_box_24" />
 
                 <TextView
+                    android:id="@+id/txtamount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_12sdp"
@@ -78,22 +80,25 @@
                     android:textStyle="bold" />
 
                 <ImageView
+                    android:id="@+id/imageadd"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_baseline_add_box_24" />
             </LinearLayout>
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnadd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginStart="@dimen/_25sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_25sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/back_order"
                 android:text="Add to Cart"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@+id/line3" />
+
             <TextView
                 android:id="@+id/txtdesc"
                 android:layout_width="match_parent"
